# xp-casper-integration

./: Cargo.toml
bridge/: Cargo.toml
bridge/src/: main.rs  structs.rs
client-rs/: .gitignore  justfile
client-rs/freeze-nft/: Cargo.toml
client-rs/freeze-nft/src/: main.rs  tid.rs
client-rs/withdraw-nft/: Cargo.toml
client-rs/withdraw-nft/src/: main.rs
contract/: justfile
contract/src/: errors.rs  events.rs  external.rs  main.rs
nwl/: Cargo.toml
nwl/src/: constants.rs  errors.rs  main.rs  structs.rs  utils.rs
src/: entrypoints.rs  errors.rs  events.rs  external.rs  keys.rs  main.rs  structs.rs  utils.rs
user-nft-store/: Cargo.toml
user-nft-store/src/: constants.rs  errors.rs  events.rs  external.rs  main.rs  structs.rs  utils.rs
