[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.6.0"
casper-event-standard = { version = "0.2.0", default-features = false }
ed25519-compact = { version = "2.0.4", default-features= false }
sha2 = { version = "0.10.6", default-features = false }
hex = {version = "0.4.3", default-features = false}